Fixed banner on mobile

--- a/kamehouse-ui/src/main/webapp/kamehouse/css/banners/kamehouse-banners-dragonball.css
+++ b/kamehouse-ui/src/main/webapp/kamehouse/css/banners/kamehouse-banners-dragonball.css
@@ -112,7 +112,7 @@
   
   @media (max-width : 499px) {
     .banner-gohan-ssj2-4 {
-      background-position-x: -130px;
+      background-position-x: 0px;
     }
   }
   
